--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span class="d-none d-lg-block">Project-II</span>
+        <span class="d-none d-lg-block">Project-III</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -93,11 +93,30 @@
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
+            <a href="https://share.streamlit.io/punitjain-jp/fda/main/fda_app.py" target="blank">
+              <i class="bi bi-circle"></i><span>FDA</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://share.streamlit.io/punitjain-jp/project/main/solubility-app.py" target="blank">
+              <i class="bi bi-circle"></i><span>Solubility</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://share.streamlit.io/punitjain-jp/dna/main/dna-app.py" target="blank">
+              <i class="bi bi-circle"></i><span>DNA</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://share.streamlit.io/punitjain-jp/moldesc/main/app.py" target="blank">
+              <i class="bi bi-circle"></i><span>Molecular Descriptor</span>
+            </a>
+          </li>
+          <li>
             <a href="https://share.streamlit.io/rahul97532/bioactivity-prediction/app.py" target="blank">
               <i class="bi bi-circle"></i><span>Bioactivity Application</span>
             </a>
           </li>
-          
         </ul>
       </li><!-- End Application Nav -->
 
@@ -271,7 +290,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="credits">
-      <p>@Credits --  For more Details go to <a href="https://www.who.int/" target="blank">WHO Portal</a> & Designed by Group G47</p>
+      <p>@Credits --  For more Details go to <a href="https://www.who.int/" target="blank">WHO Portal</a> & Designed by Group G5</p>
     </div>
   </footer><!-- End Footer -->
 
