--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <div class="col-xxl-5 col-md-12">
               <div class="card info-card revenue-card">
                 <div class="card-body">
+                  <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                       <i class="bi bi-menu-button-wide-fill"></i>
@@ -200,7 +201,7 @@
               <div class="card info-card customers-card">
 
                 <div class="card-body">
-                  <h5>----------</h5>
+                  <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
 
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -224,6 +225,7 @@
               <div class="card info-card customers-card">
 
                 <div class="card-body">
+                  <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                       <i class="bi bi-menu-button-wide-fill"></i>
@@ -246,6 +248,7 @@
               <div class="card info-card customers-card">
 
                 <div class="card-body">
+                  <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                       <i class="bi bi-menu-button-wide-fill"></i>
@@ -268,7 +271,7 @@
               <div class="card info-card customers-card">
 
                 <div class="card-body">
-   
+                  <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                       <i class="bi bi-menu-button-wide-fill"></i>
