--- a/index.html
+++ b/index.html
@@ -176,24 +176,30 @@
         <!-- Left side columns -->
         <div class="col-lg-8">
           <div class="row">
-
+            
             <!-- FDA Card -->
-            <div class="col-xxl-5 col-md-12">
-              <div class="card info-card revenue-card">
+            <div class="col-xxl-5 col-xl-12">
+
+              <div class="card info-card customers-card">
+
                 <div class="card-body">
                   <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
+
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-menu-button-wide-fill"></i>
+                      <i class="bi bi-funnel"></i>
                     </div>
                     <div class="ps-3">
                       <h6><a href="https://share.streamlit.io/punitjain-jp/fda/main/fda_app.py" target="blank">FDA</a></h6>
-                      <span class="text-danger small pt-1 fw-bold">Food & Drug Administration</span>
+                      <span class="text-success small pt-1 fw-bold">Filtration of Molecules</span>
+
                     </div>
                   </div>
+
                 </div>
               </div>
-            </div><!-- End FDA Card -->
+
+            </div><!-- End Solubility Card -->
 
             <!-- Solubility Card -->
             <div class="col-xxl-5 col-xl-12">
@@ -205,10 +211,10 @@
                   <div class="d-flex align-items-center">
 
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-menu-button-wide-fill"></i>
+                      <i class="bi bi-moisture"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>Solubility</h6>
+                      <h6><a href="https://share.streamlit.io/punitjain-jp/project/main/solubility-app.py" target="blank">Solubility</a></h6>
                       <span class="text-success small pt-1 fw-bold">Compound Solubility Calculation</span>
 
                     </div>
@@ -228,10 +234,10 @@
                   <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-menu-button-wide-fill"></i>
+                      <i class="bi bi-heart-pulse"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>DNA</h6>
+                      <h6><a href="https://share.streamlit.io/punitjain-jp/dna/main/dna-app.py" target="blank">DNA</a></h6>
                       <span class="text-success small pt-1 fw-bold">Nucleotide Composition</span>
 
                     </div>
@@ -251,10 +257,10 @@
                   <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-menu-button-wide-fill"></i>
+                      <i class="bi bi-fingerprint"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>Descriptors</h6>
+                      <h6><a href="https://share.streamlit.io/punitjain-jp/moldesc/main/app.py" target="blank">Descriptors</a></h6>
                       <span class="text-success small pt-1 fw-bold">Molecular Fingerprints</span>
 
                     </div>
@@ -274,10 +280,10 @@
                   <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-menu-button-wide-fill"></i>
+                      <i class="bi bi-radioactive"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>Bioctivity</h6>
+                      <h6><a href="https://share.streamlit.io/rahul97532/bioactivity-prediction/app.py" target="blank">Bioctivity</a></h6>
                       <span class="text-success small pt-1 fw-bold">Prediction of pIC50 Value</span>
 
                     </div>
