--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-pulse" viewBox="0 0 16 16">
+  <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-heart-pulse">
   <path fill-rule="evenodd" d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053.918 3.995.78 5.323 1.508 7H.43c-2.128-5.697 4.165-8.83 7.394-5.857.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17c3.23-2.974 9.522.159 7.394 5.856h-1.078c.728-1.677.59-3.005.108-3.947C13.486.878 10.4.28 8.717 2.01L8 2.748ZM2.212 10h1.315C4.593 11.183 6.05 12.458 8 13.795c1.949-1.337 3.407-2.612 4.473-3.795h1.315c-1.265 1.566-3.14 3.25-5.788 5-2.648-1.75-4.523-3.434-5.788-5Zm8.252-6.686a.5.5 0 0 0-.945.049L7.921 8.956 6.464 5.314a.5.5 0 0 0-.88-.091L3.732 8H.5a.5.5 0 0 0 0 1H4a.5.5 0 0 0 .416-.223l1.473-2.209 1.647 4.118a.5.5 0 0 0 .945-.049l1.598-5.593 1.457 3.642A.5.5 0 0 0 12 9h3.5a.5.5 0 0 0 0-1h-3.162l-1.874-4.686Z"/>
   </svg>
 
@@ -334,20 +334,20 @@
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-3.jpg" alt="">
-                  <h4><a href="https://www.who.int/news/item/22-12-2021-from-vaccines-to-vaccinations-seventh-meeting-of-the-multilateral-leaders-task-force-on-covid-19-vaccines-therapeutics-and-diagnostics">Vaccine to Vaccinations</a></h4>
-                  <p>Seventh meeting of the Multilateral Leaders Task Force on COVID-19 Vaccines, Therapeutics and Diagnostics...</p>
+                  <h4><a href="https://www.who.int/news/item/19-05-2022-who-validates-11th-vaccine-for-covid-19">The 11th Vaccine</a></h4>
+                  <p>The World Health Organization (WHO) issued an emergency use listing (EUL) for CONVIDECIA, a vaccine manufactured by CanSino Biologics, China, adding to a growing portfolio of vaccines validated by WHO for the prevention of COVID-19 caused by SARS-CoV-2......</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-4.jpg" alt="">
-                  <h4><a href="https://www.who.int/news/item/23-12-2021-achieving-70-covid-19-immunization-coverage-by-mid-2022">70% Immunization</a></h4>
-                  <p>Achieving 70% COVID-19 Immunization Coverage by Mid-2022...</p>
+                  <h4><a href="https://www.who.int/news/item/17-05-2022-interim-statement-on-the-use-of-additional-booster-doses-of-emergency-use-listed-mrna-vaccines-against-covid-19">mRNA Vaccines</a></h4>
+                  <p>Interim statement on the use of additional booster doses of Emergency Use Listed mRNA vaccines against COVID-19.....</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-5.jpg" alt="">
-                  <h4><a href="https://www.who.int/news/item/21-12-2021-who-lists-10th-covid-19-vaccine-for-emergency-use-nuvaxovid">The 10th Vaccine</a></h4>
-                  <p>WHO lists 10th COVID-19 vaccine for emergency use : Nuvaxovid...</p>
+                  <h4><a href="https://www.who.int/emergencies/disease-outbreak-news">Outbreak</a></h4>
+                  <p>Latest WHO Disease Outbreak News (DONs), providing information on confirmed acute public health events or potential events of concern...</p>
                 </div>
 
               </div><!-- End sidebar Posts-->
