--- a/index.html
+++ b/index.html
@@ -150,9 +150,16 @@
       </li><!-- End Industry Nav -->
 
       <li class="nav-heading">Pages</li>
+      
+       <li class="nav-item">
+        <a href="https://portal.who.int/triplebillions/" target="blank">
+          <i class="bi bi-envelope"></i>
+          <span>Triple Billion Dashboard (by WHO)</span>
+        </a>
+      </li><!--  -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-contact.html">
+        <a href="pages-contact.html">
           <i class="bi bi-envelope"></i>
           <span>Contact</span>
         </a>
