--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
       <li class="nav-heading">Pages</li>
       
        <li class="nav-item">
-        <a href="https://portal.who.int/triplebillions/" target="blank">
+        <a class="nav-link collapsed" href="https://portal.who.int/triplebillions/" target="blank">
           <i class="bi bi-envelope"></i>
           <span>Triple Billion Dashboard (by WHO)</span>
         </a>
       </li><!--  -->
 
       <li class="nav-item">
-        <a href="pages-contact.html">
+        <a class="nav-link collapsed" href="pages-contact.html">
           <i class="bi bi-envelope"></i>
           <span>Contact</span>
         </a>
