--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <li class="nav-heading">Pages</li>
       
        <li class="nav-item">
-        <a class="nav-link collapsed" href="https://portal.who.int/triplebillions/" target="blank">
+        <a class="nav-link collapsed" href="https://portal.who.int/triplebillions/">
           <i class="bi bi-envelope"></i>
           <span>Triple Billion Dashboard (by WHO)</span>
         </a>
