--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
       </li><!-- End Industry Nav -->
 
       <li class="nav-heading">Pages</li>
+      
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="https://portal.who.int/triplebillions/">
+          <i class="bi bi-clipboard-data"></i>
+          <span>Triple Billion Target(WHO)</span>
+        </a>
+      </li><!-- End nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="pages-contact.html">
