--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-heart-pulse"></i>
+                      <img src="assets/img/heart-pulse.svg">
                     </div>
                     <div class="ps-3">
                       <h6><a href="https://share.streamlit.io/punitjain-jp/dna/main/dna-app.py" target="blank">DNA</a></h6>
