--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <span class="d-none d-md-block dropdown-toggle ps-2">Developer</span>
-          </a><!-- End Profile Iamge Icon -->
+          </a><!-- End Profile Image Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
@@ -241,7 +241,7 @@
                   <h5 style="color:white;">----------</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <img src="assets/img/heart-pulse.svg">
+                      <i class="bi bi-heart-pulse"></i>
                     </div>
                     <div class="ps-3">
                       <h6><a href="https://share.streamlit.io/punitjain-jp/dna/main/dna-app.py" target="blank">DNA</a></h6>
