--- a/index.html
+++ b/index.html
@@ -93,28 +93,28 @@
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="https://share.streamlit.io/punitjain-jp/fda/main/fda_app.py" target="blank">
-              <i class="bi bi-circle"></i><span>FDA</span>
+            <a href="https://www.fda.gov/drugs" target="blank">
+              <i class="bi bi-square"></i><span>FDA Medicines</span>
             </a>
           </li>
           <li>
-            <a href="https://share.streamlit.io/punitjain-jp/project/main/solubility-app.py" target="blank">
-              <i class="bi bi-circle"></i><span>Solubility</span>
+            <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3328702/#:~:text=Protein%20solubility%20is%20a%20thermodynamic,of%20extrinsic%20and%20intrinsic%20factors." target="blank">
+              <i class="bi bi-square"></i><span>Protein Solubility</span>
             </a>
           </li>
           <li>
-            <a href="https://share.streamlit.io/punitjain-jp/dna/main/dna-app.py" target="blank">
-              <i class="bi bi-circle"></i><span>DNA</span>
+            <a href="https://www.genome.gov/about-genomics/fact-sheets/A-Brief-Guide-to-Genomics#:~:text=Genomics%20is%20the%20study%20of,and%20with%20the%20person's%20environment." target="blank">
+              <i class="bi bi-square"></i><span>Genomics</span>
             </a>
           </li>
           <li>
-            <a href="https://share.streamlit.io/punitjain-jp/moldesc/main/app.py" target="blank">
-              <i class="bi bi-circle"></i><span>Molecular Descriptor</span>
+            <a href="https://jcheminf.biomedcentral.com/articles/10.1186/s13321-020-00445-4#:~:text=Molecular%20fingerprints%20are%20essential%20cheminformatics,large%20molecules%20such%20as%20peptides." target="blank">
+              <i class="bi bi-square"></i><span>Molecular Finger-Printing</span>
             </a>
           </li>
           <li>
-            <a href="https://share.streamlit.io/rahul97532/bioactivity-prediction/app.py" target="blank">
-              <i class="bi bi-circle"></i><span>Bioactivity Application</span>
+            <a href="https://en.wikipedia.org/wiki/Biological_activity" target="blank">
+              <i class="bi bi-square"></i><span>Bioactivity</span>
             </a>
           </li>
         </ul>
@@ -122,24 +122,24 @@
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-bar-chart"></i><span>Industries</span><i class="bi bi-chevron-down ms-auto"></i>
+          <i class="bi bi-building"></i><span>Industries</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
             <a href="assets\Analysis Covid-19.pbix" target="blank">
-              <i class="bi bi-circle"></i><span>Detailed COVID Analysis</span>
+              <i class="bi bi-square"></i><span>Detailed COVID Analysis</span>
             </a>
           </li>
 
           <li>
             <a href="assets\insight.pdf" taret="blank">
-              <i class="bi bi-circle"></i><span>Some Insights Related To Analysis</span>
+              <i class="bi bi-square"></i><span>Some Insights Related To Analysis</span>
             </a>
           </li>
 
           <li>
             <a href="assets\Recent Situation Analysis.pbix" target="blank">
-              <i class="bi bi-circle"></i><span>Recent Situation Analysis</span>
+              <i class="bi bi-square"></i><span>Recent Situation Analysis</span>
             </a>
           </li>
 
@@ -169,7 +169,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Welcome To The Bionformatics Project</h1>
+      <h1>Welcome To The Bio-Informatics Project</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"></li>
