--- a/index.html
+++ b/index.html
@@ -339,19 +339,19 @@
                 <div class="post-item clearfix">
                   <img src="assets/img/news-3.jpg" alt="">
                   <h4><a href="https://www.who.int/news/item/19-05-2022-who-validates-11th-vaccine-for-covid-19">The 11th Vaccine</a></h4>
-                  <p>The World Health Organization (WHO) issued an emergency use listing (EUL) for CONVIDECIA, a vaccine manufactured by CanSino Biologics, China, adding to a growing portfolio of vaccines validated by WHO for the prevention of COVID-19 caused by SARS-CoV-2......</p>
+                  <p>The World Health Organization (WHO) issued an (EUL) for CONVIDECIA, a vaccine manufactured by CanSino Biologics......</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-4.jpg" alt="">
                   <h4><a href="https://www.who.int/news/item/17-05-2022-interim-statement-on-the-use-of-additional-booster-doses-of-emergency-use-listed-mrna-vaccines-against-covid-19">mRNA Vaccines</a></h4>
-                  <p>Interim statement on the use of additional booster doses of Emergency Use Listed mRNA vaccines against COVID-19.....</p>
+                  <p>Interim statement on Emergency Use Listed mRNA vaccines against COVID-19.....</p>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/news-5.jpg" alt="">
                   <h4><a href="https://www.who.int/emergencies/disease-outbreak-news">Outbreak</a></h4>
-                  <p>Latest WHO Disease Outbreak News (DONs), providing information on confirmed acute public health events or potential events of concern...</p>
+                  <p>Latest WHO Disease Outbreak News (DONs), providing information on potential events of concern...</p>
                 </div>
 
               </div><!-- End sidebar Posts-->
