--- a/index.html
+++ b/index.html
@@ -127,19 +127,13 @@
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
             <a href="assets\Analysis Covid-19.pbix" target="blank">
-              <i class="bi bi-square"></i><span>Detailed COVID Analysis</span>
+              <i class="bi bi-square"></i><span>COVID-19 Analysis</span>
             </a>
           </li>
 
           <li>
             <a href="assets\insight.pdf" taret="blank">
-              <i class="bi bi-square"></i><span>Some Insights Related To Analysis</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="assets\Recent Situation Analysis.pbix" target="blank">
-              <i class="bi bi-square"></i><span>Recent Situation Analysis</span>
+              <i class="bi bi-square"></i><span>Detailed Insights</span>
             </a>
           </li>
 
